spectec/test/elab/neg/type-syn-invalid-id.t
  $ ./main.exe type-syn-invalid-id.spectec 2>&1
  error[elab/syn-invalid-id]: invalid type identifier
    --> type-syn-invalid-id.spectec:4:8
    |
  4 | syntax x_1
    |        ^^^
  [1]
